--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,52 @@
 
 	<build>
 		<sourceDirectory>src</sourceDirectory>
+		<resources>
+			<resource>
+				<directory>${project.basedir}/os</directory>
+				<includes>
+					<include>**</include>
+				</includes>
+			</resource>
+		</resources>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>make-compile</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target name="make">
+								<exec executable="make" failonerror="true"
+									dir="${project.basedir}/native" os="Linux">
+									<arg line="-f Makefile_linux" />
+								</exec>
+							</target>
+						</configuration>
+					</execution>
+					<execution>
+						<id>make-clean</id>
+						<phase>clean</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target name="make">
+								<exec executable="make" failonerror="true"
+									dir="${project.basedir}/native" os="Linux">
+									<arg line="-f Makefile_linux clean" />
+								</exec>
+							</target>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
